--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     strategy:
      matrix:
@@ -41,9 +41,9 @@ jobs:
     - run: npx cypress run
      
     # relatorios mocha
-    - run: npm run report:merge
+    #- run: npm run report:merge
     
-    - run: npm run report:mocha
+    #- run: npm run report:mocha
     
      # Publicar relatorio em html
     - name: Deploy to GitHubPages
