--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,14 +41,14 @@ jobs:
     - run: npx cypress run
      
     # relatorios mocha
-    - run: chmod +x npm run report:merge
+    - run: npm run report:merge
     
-    - run: chmod +x npm run report:mocha
+    - run: npm run report:mocha
     
      # Publicar relatorio em html
-    - name: Deploy to GitHubPages
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: mochawesome-report
+    #- name: Deploy to GitHubPages
+     # uses: JamesIves/github-pages-deploy-action@3.7.1
+     # with:
+      #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       # BRANCH: gh-pages
+      #  FOLDER: mochawesome-report
