--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,9 @@ jobs:
     - run: npm run report:mocha
     
      # Publicar relatorio em html
-    #- name: Deploy to GitHubPages
-     # uses: JamesIves/github-pages-deploy-action@3.7.1
-     # with:
-      #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       # BRANCH: gh-pages
-      #  FOLDER: mochawesome-report
+    - name: Deploy to GitHubPages
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: cypress/mochawesome-report
