--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,15 +35,15 @@ jobs:
         node-version: ${{ matrix.node-version }}
         
     # Instalando as dependencias 
-    - run: npm install  
+    - run: sudo npm install  
       
      # executar os testes usando o cucumber
-    - run: npx cypress run
+    - run: sudo npx cypress run
      
     # relatorios mocha
-    - run: npm run report:merge
+    - run: sudo npm run report:merge
     
-    - run: npm run report:mocha
+    - run: sudo npm run report:mocha
     
      # Publicar relatorio em html
     - name: Deploy to GitHubPages
