--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     - run: sudo npm install  
       
      # executar os testes usando o cucumber
-    - run: sudo npx cypress run
+    - run: npx cypress run
      
     # relatorios mocha
     - run: sudo npm run report:merge
